Modify simditor-init.js use backend config

--- a/simditor/templates/simditor/widget.html
+++ b/simditor/templates/simditor/widget.html
@@ -1,3 +1,3 @@
 <div class="django-simditor-widget" data-field-id="{{id}}" style="display: inline-block;">
-    <textarea{{ final_attrs|safe }} id="editor" data-processed="0" data-config='{{config|safe}}' data-external-plugin-resources='{{external_plugin_resources|safe}}' data-id="{{id}}" data-type="simditortype">{{ value }}</textarea>
+    <textarea{{ final_attrs|safe }} id="editor" data-processed="0" data-config='{{config|safe}}' data-id="{{id}}" data-type="simditortype">{{ value }}</textarea>
 </div>
