Fix django2.1 bug

--- a/simditor_demo/templates/index.html
+++ b/simditor_demo/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form method="post" action="./">
-
+        {% csrf_token %}
         {{ form.media }}
         {{ form.as_p }}
         <p><input type="submit" value="post"></p>
